client/src/components/controls/navbar/navbar.scss
.navlinks {
  text-decoration: none !important;
  font-weight: 700;
  color: white;
}

.navlinks:hover {
  background-color: #f1e4ef;
  color: #8e4b86;
  // border-bottom: 7px solid #fafafa;
}

.active-navlinks {
  background-color: white !important;
  color: #8e4b86 !important;
  // border-bottom: 7px solid #bb0e3d !important;
}

.bg-nav {
  border-style: solid;
  border-color: #f5f5f5;
  background-color: #8e4b86;
}


// .active-navlinks {
//   background-color: #fc8701 !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #fc8701 !important;
// }

// .active-navlinks#Visualization {
//   background-color: #fc8701 !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #fc8701 !important;
// }

// .active-navlinks#Catalog {
//   background-color: #2c71dd !important;
//   color: #fafafa !important;
//   // border-bottom: 7px solid #2c71dd !important;
// }

// .active-navlinks#Refitting {
//   background-color: #7cac53 !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #689f39 !important;
// }

// .active-navlinks#Association {
//   background-color: #84368d !important;
//   color: #fafafa !important;
//   // border-bottom: 7px solid #84368d !important;
// }

// .active-navlinks#Publications {
//   background-color: #fafafa !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #606060 !important;
// }

// .active-navlinks#FAQ {
//   background-color: #fafafa !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #606060 !important;
// }

// .active-navlinks#About {
//   background-color: #fafafa !important;
//   color: #2f2f2f !important;
//   // border-bottom: 7px solid #606060 !important;
// }

// button {
//   background-color: white !important;
//   color: black !important;
//   font-weight: 700 !important;
// }

